--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     </header>
     <div class="middle">
-       <div class="title"><p>Developer, Pastry Chef, and Comedian</p></div>
+       <div class="title"><p>Full Stack Web Developer</p></div>
+       <!-- <img src="Mike Hoffman-6 copy.jpg" class="picture" alt="Michael Hoffman"></div> -->
         <div class="quote"><p>"Success is not final, failure is not fatal: it is the courage to continue that counts. ~Winston Churchill~</p></div>
         <img src="Mike Hoffman-6 copy.jpg" class="picture" alt="Michael Hoffman"></div>
     </div>
@@ -34,8 +35,9 @@
                 <ul>
                     <li><a href="https://www.facebook.com/mike.hoffman.549" img src="a href="# class="fa fa-facebook">
                     </a></li>
-                    <li><a href="https://www.instagram.com/"img src="a href="# class="fa fa-instagram"></a></li>
-                    <li><a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"img src="a href="# class="fa fa-linkedin"></a></li>
+                    <li><a href="https://www.instagram.com/whoismikehoffman/"img src="a href="# class="fa fa-instagram"></a></li>
+                    <li><a href="https://www.linkedin.com/in/michaelhoffman7788/"img src="a href="# class="fa fa-linkedin"></a></li>
+                    <li><a href="https://github.com/M1k3H0FF" img src="a href"class="fa fa-github" aria-hidden="true"></a></li>
                     
                 </ul>
             </div>
