moving name over, structing other pages so they look better

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
                 </a></li>
                 <li><a href="https://www.instagram.com/"img src="a href="# class="fa fa-instagram"></a></li>
                 <li><a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"img src="a href="# class="fa fa-linkedin"></a></li>
+                <li><a href="https://github.com/M1k3H0FF" img src="a href"class="fa fa-github" aria-hidden="true"></a></li>
                 
             </ul>
         </div>
