--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     </header>
-    <div class="title"><p>My Creations</p></div>
+    <div class="title"><p>Portfolio</p></div>
     <article class="project1">
         <div class="project1title"><h3>Project 1</h3></div>
         <img class="project1pic" src="project1.jpg" alt="Project 1" />
@@ -48,6 +48,7 @@
                 </a></li>
                 <li><a href="https://www.instagram.com/"img src="a href="# class="fa fa-instagram"></a></li>
                 <li><a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin"img src="a href="# class="fa fa-linkedin"></a></li>
+                <li><a href="https://github.com/M1k3H0FF" img src="a href"class="fa fa-github" aria-hidden="true"></a></li>
                 
             </ul>
         </div>
